--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section {
     flex-direction: column;
     align-items: center;
 
-    height: 50vh;
+    height: 67vh;
     text-align: center;
     justify-content: center;
 }
@@ -63,7 +63,7 @@ label{
 }
 
 input:checked + .categorias{
-    height: 47vh;
+    height: 30vh;
 }
 
 .categorias div:nth-child(1) section{
@@ -87,7 +87,7 @@ input:checked + .categorias{
    border-radius: 20px;
 }
 
-.pcd  a {
+ a {
     width:100%;
     width:130px ;
     padding: 10px;
